--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.0",
     "@heroicons/vue": "^2.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -20,7 +21,6 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
